feat: implement backend route for getting all average users rating per application
